<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/are_you_at_risk"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"

        android:text="@string/test" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="80dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="goToQuiz"
        android:text="@string/start"
        android:textColor="#FF0000"
        android:textSize="40sp"
        android:textStyle="bold" />
</LinearLayout>